--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     </style>
 </head>
 <body>
+<p><a href="https://ivanfokin150-sys.github.io/zadania_fokin/">W R Ó Ć</a></p>
+    
 <IMG SRC="kaczka.gif" ALIGN=right BORDER=3 WIDTH=250 HEIGHT=100 ALT="grafika">
     <div class="blok blok1">
         <h2 style="text-align: left;">Żart o Jasiu</h2>
@@ -87,3 +89,4 @@ Dodatkowo, walidatory mogą również sprawdzać autentyczność podpisów elekt
 </body>
 
 </html>
+
